# llm_learning_from_experience

./: .gitattributes  .gitignore  profile.html  pyproject.toml
artifacts/2008/: competition_data.mat  estimation_data.mat
artifacts/2010/: instructions.toml
data/2010/processed/: README.md  description_comp.csv  description_est.csv
data/2010/raw/: README.md
results/2008/: 1.0_6.csv  10.0_10.csv  10.0_5.csv  100.0_2.csv  100.0_3.csv  100.0_7.csv  100.0_8.csv  11.0_6.csv  11.0_7.csv  12.0_10.csv  12.0_3.csv  12.0_4.csv  12.0_5.csv  13.0_9.csv  14.0_3.csv  14.0_4.csv  15.0_0.csv  16.0_1.csv  18.0_6.csv  18.0_8.csv  19.0_3.csv  19.0_9.csv  2.0_9.csv  20.0_5.csv  22.0_0.csv  22.0_4.csv  23.0_1.csv  24.0_3.csv  24.0_4.csv  25.0_0.csv  26.0_1.csv  26.0_11.csv  26.0_3.csv  27.0_1.csv  27.0_4.csv  27.0_5.csv  29.0_3.csv  3.0_3.csv  30.0_0.csv  30.0_11.csv  (+143 more)
results/2008/memory_20/: 1.0_0.csv  1.0_1.csv  1.0_10.csv  1.0_2.csv  1.0_5.csv  1.0_8.csv  10.0_0.csv  10.0_2.csv  10.0_3.csv  10.0_4.csv  10.0_6.csv  10.0_7.csv  10.0_8.csv  10.0_9.csv  100.0_1.csv  100.0_10.csv  100.0_5.csv  100.0_9.csv  11.0_0.csv  11.0_10.csv  11.0_2.csv  11.0_3.csv  11.0_5.csv  11.0_8.csv  12.0_7.csv  13.0_1.csv  13.0_10.csv  13.0_2.csv  13.0_3.csv  13.0_4.csv  13.0_5.csv  13.0_6.csv  14.0_0.csv  14.0_2.csv  14.0_5.csv  14.0_7.csv  15.0_10.csv  (+517 more)
src/: analyze_results.ipynb  demo.ipynb  experiment.ipynb  experiment_2008.ipynb  experiment_2008.py  llm.py  primacy.py  raw_data_to_parsed.ipynb  recency.py  single_trial_input.txt
src/parsing/: parse_data.ipynb  parse_results.ipynb
tests/: test_llm.py
(+1635 files in other folders)
